# llmprojects-document-portal

./: .gitignore  Dockerfile  README.md  commit_instructions.md  pyproject.toml  setup.py  test.py
api/: main.py
exception/: custom_exception.py
faiss_index/: index.pkl
faiss_index/session_20250810_061446_daaf64df/: index.pkl
faiss_index/session_20250810_061632_35f69265/: index.pkl
faiss_index/session_20250810_061652_753e587b/: index.pkl
faiss_index/session_20250810_063039_3d9264ec/: index.pkl
faiss_index/session_20250810_063306_e4abda0d/: index.pkl
logger/: __init__.py
model/: model.py
notebooks/: exception_experiment.ipynb  experiments.ipynb  loggin_experiments.ipynb
src/document_analyzer/: data_analysis.py  data_ingestion.py
src/document_chat/: retriever.py
src/document_compare/: document_comparator.py
src/document_ingestion/: data_ingestion.py
src/multi_document_chat/: data_ingestion.py  retriever.py
src/single_document_chat/: __init__.py  retriever.py
utils/: config_loader.py  model_loader.py
